[project]
name = "cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.9",
    "notion-client==2.2.1",
    "notion2md>=2.9.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "supabase>=2.29.0",
    "uvicorn[standard]>=0.46.0",
    "voyageai>=0.3.7",
]
